k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: barber-booking

spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
