k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: barber-booking

spec:
  clusterIP: None

  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
